--- a/public/index.html
+++ b/public/index.html
@@ -4,4 +4,4 @@
   js = d.createElement(s); js.id = id;
   js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=146563562186553";
   fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script><h1>Essence of CoffeeScript</h1><h3><a href="/syntax-shortcuts.html">Tutorial 1: Syntax Shortcuts</a></h3></body></html>
+}(document, 'script', 'facebook-jssdk'));</script><div id="toc"><h1>Essence of CoffeeScript</h1><h3><a href="/syntax-shortcuts.html">Tutorial 1: Syntax Shortcuts</a></h3></div></body></html>
