--- a/public/index.html
+++ b/public/index.html
@@ -4,4 +4,4 @@
   js = d.createElement(s); js.id = id;
   js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=146563562186553";
   fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script><div id="toc"><h1>Learn CoffeeScript in 1 Day</h1><h2><a href="/syntax-shortcuts.html"><p>Essence of CoffeeScript</p><p>Syntax Shortcuts</p></a></h2></div></body></html>
+}(document, 'script', 'facebook-jssdk'));</script><div id="toc"><h1><a href="/syntax-shortcuts.html">Essence of CoffeeScript</a></h1><h2><a href="/syntax-shortcuts.html"><p>Syntax Shortcuts</p></a></h2></div></body></html>
